--- a/wars/parent-opencps-vue/src/main/webapp/css/clay.css
+++ b/wars/parent-opencps-vue/src/main/webapp/css/clay.css
@@ -18395,12 +18395,12 @@ th {
 
 .table-bordered thead td,
 .table-bordered thead th {
-    border-top-width: 1px
+    border-top-width: 0
 }
 
 .table-bordered td,
 .table-bordered th {
-    border-width: 1px
+    border-width: 0
 }
 
 .table-striped tbody tr:nth-of-type(odd) td,
@@ -25537,7 +25537,7 @@ a .icon-fb-decimal {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     display: inline-block;
-    font-family: 'Glyphicons Halflings';
+    font-family: 'Glyphicons Halflings' !important;
     font-style: normal;
     font-weight: normal;
     line-height: 1;
@@ -27569,8 +27569,8 @@ label {
 .radio,
 .checkbox {
     display: block;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin-bottom: unset !important;
+    margin-top: unset !important;
     position: relative
 }
 
@@ -27580,7 +27580,7 @@ label {
     cursor: pointer;
     font-weight: normal;
     margin-bottom: 0;
-    padding-left: 20px
+    padding-left: unset !important;
 }
 
 .radio input[type="radio"],
@@ -27617,13 +27617,13 @@ label {
 .checkbox label,
 .radio label {
     font-weight: 600;
-    padding-left: 25px
+    padding-left: unset !important;
 }
 
 @media(-webkit-min-device-pixel-ratio:0) {
     .checkbox label,
     .radio label {
-        padding-left: 20px
+        padding-left: unset !important;
     }
 }
 
@@ -30432,4 +30432,16 @@ div.splitter,
     width: 12px;
     margin-right: 5px;
     height: 12px;
+}
+body .tooltip {
+    padding-top: inherit;
+}
+.datatable__progress, .datatable__progress td, .datatable__progress th, .datatable__progress tr {
+	    display: none !important;
+}
+body .alpaca-field table thead tr {
+  height: auto;
+}
+body .alpaca-array-actionbar.alpaca-array-actionbar-top {
+	padding-bottom: unset !important;
 }
