--- a/wars/child-opencps-vue/src/main/webapp/css/clay.css
+++ b/wars/child-opencps-vue/src/main/webapp/css/clay.css
@@ -30445,3 +30445,6 @@ body .alpaca-field table thead tr {
 body .alpaca-array-actionbar.alpaca-array-actionbar-top {
 	padding-bottom: unset !important;
 }
+body .column {
+    float: inherit !important;
+}
